prodMetadata/src/objects/Contact_Attachment_Email_Service__c.object
<CustomObject>
    <customSettingsType>List</customSettingsType>
    <description>Custom settings for ContactAttachment email service</description>
    <fields>
        <fullName>Error_Message_Body__c</fullName>
        <description>Body of message sent back to sender when no contact matches the incoming email address</description>
        <label>Error Message Body</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Error_Message_Subject__c</fullName>
        <description>Subject of message sent back to sender when no contact matches the incoming email address</description>
        <label>Error Message Subject</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Minimum_Attachment_Size__c</fullName>
        <description>File size in bytes. Attachments of size below this minimum would be ignored by the email service.</description>
        <label>Minimum Attachment Size</label>
        <precision>18</precision>
        <required>true</required>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <label>Contact Attachment Email Service</label>
</CustomObject>